# nq-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  error_codes.json  open-api.json
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
authN/: Cargo.toml
authN/src/: lib.rs  middleware.rs
authZ/: Cargo.toml
authZ/src/: lib.rs  middleware.rs
migrations/00000000000003_create_mushaf/: down.sql  up.sql
migrations/00000000000004_create_app_phrases/: down.sql  up.sql
migrations/00000000000004_create_quran_surahs/: up.sql
migrations/00000000000005_create_quran_surahs/: up.sql
migrations/2023-02-19-100955_create_quran_ayahs/: up.sql
migrations/2023-03-12-100253_create_translation/: down.sql  up.sql
migrations/2023-03-12-100301_create_translation_text/: down.sql  up.sql
migrations/2023-08-06-081241_create_app_permissions/: up.sql
migrations/2024-06-03-121608_app_error_logs/: down.sql  up.sql
migrations/2024-08-20-100720_create_app_phrases/: up.sql
migrations/2024-08-20-100856_app_phrase_translations/: down.sql  up.sql
migrations/2024-12-05-083921_create_quran_ayah_divide/: down.sql  up.sql
migrations/2024-12-05-083921_create_quran_ayahs_breakers/: up.sql
migrations/2024-12-05-083921_create_quran_ayahs_divide/: down.sql  up.sql
migrations/2024-12-05-184846_create_quran_word_divide/: down.sql  up.sql
migrations/2024-12-05-184846_create_quran_words_breakers/: up.sql
src/: authz.rs  datetime.rs  difference.rs  error.rs  filter.rs  macros.rs  main.rs  models.rs  models_filter.rs  schema.rs  token_checker.rs  validate.rs
(+71 files in other folders)
